# netzero-metrics-reference-data

./: .gitignore  README.md  energy-use-intensity.csv  pixi.toml  pyproject.toml
.github/: frictionless-validate-failure.md  frictionless-validate.yml
.github/workflows/: frictionless-validate.yml  test-and-validate.yml
scripts/: energy-use-intensity.xlsx  get_eui.py
src/netzero_metrics_reference_data/: __init__.py
